--- a/gene_expression.ipynb
+++ b/gene_expression.ipynb
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "b0d7245d",
    "metadata": {},
    "outputs": [
@@ -979,6 +979,7 @@
      "text": [
       "Maior valor: 0.8861111111111111, K: 9, Folds: 5\n",
       "Best model: K=9, Folds=5, Precision=0.8861\n",
+      "Classification Report:\n",
       "Acurácia: 0.6818\n",
       "Precisão: 0.8333\n",
       "Recall: 0.5625\n",
@@ -1011,6 +1012,7 @@
     "precision = precision_score(y_test_Min, y_pred, average='macro')\n",
     "recall = recall_score(y_test_Min, y_pred, average='macro')\n",
     "f1 = f1_score(y_test_Min, y_pred, average='macro')\n",
+    "print(\"Classification Report:\")\n",
     "print(f\"Acurácia: {acc:.4f}\")\n",
     "print(f\"Precisão: {precision:.4f}\")\n",
     "print(f\"Recall: {recall:.4f}\")\n",
@@ -1054,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "7c0ffbb5",
    "metadata": {},
    "outputs": [
@@ -1067,6 +1069,19 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultados da Seleção de Recursos:\n",
+      "Univariada (F-score) com N=10: Acurácia = 0.8724\n",
+      "Univariada (F-score) com N=50: Acurácia = 0.8733\n",
+      "Univariada (F-score) com N=100: Acurácia = 0.8171\n",
+      "Random Forest (Importância) com N=10: Acurácia = 0.8143\n",
+      "Random Forest (Importância) com N=50: Acurácia = 0.8162\n",
+      "Random Forest (Importância) com N=100: Acurácia = 0.8305\n"
+     ]
     }
    ],
    "source": [
@@ -1117,7 +1132,13 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "#printar resultados\n",
+    "print(\"Resultados da Seleção de Recursos:\")\n",
+    "for method, accs in results.items():\n",
+    "    for N, acc in zip(N_features, accs):\n",
+    "        print(f\"{method} com N={N}: Acurácia = {acc:.4f}\")"
    ]
   }
  ],
